--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prompt": "^1.3.0",
+    "prompt-sync": "^4.2.0"
   }
 }
